--- a/Partsview4/src/app/app.component.html
+++ b/Partsview4/src/app/app.component.html
@@ -10,8 +10,8 @@
 
                 <as-split direction="vertical">
                     <as-split-area [size]="50">
-                        <!-- <app-navigation></app-navigation> -->
-                        <app-navigation-dynamic></app-navigation-dynamic>
+                        <app-navigation></app-navigation>
+                        <!-- <app-navigation-dynamic></app-navigation-dynamic> -->
                     </as-split-area>
                     <as-split-area [size]="50">
 
